--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <ul>
         <li><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-youtube-square"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
         <li>Todos los Derechos Reservados | Diseñado Por Ulises Adonay Flores Martínez</li>
       </ul>
     </footer>
